[package]
name = "loki-client"
description = "Fast GUI Loki chat client."
authors = ["The Loki Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
loki-shared = { path = "../loki-shared" }
lokui = { path = "../lokui" }
protolok = { path = "../protolok" }
rsa = "0.8.2"
sha2 = "0.10.6"
tokio = { version = "1.27.0", features = ["full"] } # TODO: change feature flags
