[package]
name = "loki-shared"
description = "Shared modules between the client and the backend."
authors = ["The Loki Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = { version="2.0", features=["reusable_secrets"] }
rand = "0.8"
