[package]
name = "lokui"
description = "GUI framework for Loki."
authors = ["The Loki Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
skia-safe = { version = "0.63.0", features = ["gl"] }

[dev-dependencies]
gl = "0.14.0"
glutin = "0.30.9"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
winit = "0.28.6"
