[package]
name = "protolok"
description = "Custom internet protocol for Loki."
authors = ["The Loki Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
sha2 = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = { version="2.0", features=["reusable_secrets"] }
